<resources>
    <string name="app_name">Lectoo Player</string>
    <string name="preferences">preference</string>
    <string name="preferences_sources">preference_sources_set</string>


    <!-- FileManager -->
    <string name="file_manager_label">Импорт треков</string>
    <string name="fm_menu_close">Закрыть</string>
    <string name="fm_button_back">Назад</string>
    <string name="fm_button_another_fm">Использовать другой файловый менеджер</string>

    <string name="fm_subtitle_choose_device">Выберите устройство</string>

    <string name="fm_toast_file_not_support">Файлы этого формата не поддерживаются!</string>
    <string name="fm_toast_select_file">Сначала выберите папку!</string>

    <string name="fm_alert_dir_description">Импортировать треки из папки \"%s\"?</string>
    <string name="fm_alert_file_description">Импортировать трек \"%s\"?</string>

    <string name="fm_alert_title">Импорт</string>
    <string name="fm_alert_cb_with_inner">Включая вложенные папки</string>


    <!-- HomeActivity -->
    <string-array name="ha_menu_item">
        <item>Настройки</item>
        <item>Invisible item</item>
    </string-array>


    <!-- TrackListActivity -->
    <string name="tl_need_permission">Для работы приложения необходимо предоставить разрешение
        на использование памяти.</string>

    <!-- WelcomeFragment -->
    <string name="wf_explanation_title">Список пуст</string>
    <string name="wf_explanation_text">Чтобы воспользоваться приложением, укажите папку
        с аудиофайлами в настройках или нажмите на кноку \"Импортировать\".</string>
    <string name="wf_import_button">Импортировать</string>

    <!-- PlayerFragment -->


    <!-- Settings -->
    <string name="sa_activity_label">Настройки</string>

    <!-- SettingsMainFragment -->
    <string name="fsm_import_title">Импорт</string>
    <string name="fsm_import_desc">Укажите папки с аудиофайлами</string>

    <string name="fsm_about_title">О программе</string>
    <string name="fsm_about_desc">Версия: %s</string>

    <!-- SettingsImportFragment -->
    <string name="fsi_source_text">Источники аудиофайлов:</string>
    <string name="fsi_list_is_empty">Список пуст</string>



</resources>
