<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/fsm_import"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/fsm_import_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"

            android:text="@string/fsm_import_title"
            android:textSize="16sp"
            android:textColor="@color/textDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/fsm_import_desc"
            android:paddingTop="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"


            android:layout_below="@+id/fsm_import_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/fsm_about"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/fsm_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"

            android:text="@string/fsm_about_title"
            android:textSize="16sp"
            android:textColor="@color/textDark"
            />

        <TextView
            android:id="@+id/fsm_about_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/fsm_about_desc"
            android:paddingTop="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"

            android:layout_below="@+id/fsm_about_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line"/>

    </RelativeLayout>

</LinearLayout>